refactor: replace fileChanges JSON with tool-based file operations
Replace the `fileChanges` array mechanism with dedicated file tools
(`write-file`, `patch-file`, `mkdir`, `delete-file`) executed via
`runTools`, eliminating DiffApplyService and the SEARCH/REPLACE diff
format entirely.

Changes:
- Add file tools to ToolExecutionService with path-traversal guard
- Add isSilentTool() combining context + file tools (no public comment)
- Add commitAndPush() to WorkspaceService; remove deprecated
  applyFileChangeToWorkspace() and DiffApplyService dependency
- Rewrite IssueImplementationService: clone once, AI runs file tools
  in workspace, commit+push after successful validation
- Filter silent tools from "Will run" comment in IssueNotificationService;
  truncate long args to prevent file content leaking into comments
- Fix AiResponseParser: add truncateToFirstJsonObject() to handle
  duplicated AI responses (Trailing token parse error)
- Remove DiffApplyService, FileChangeApplier, FileChange model,
  AgentFileChange session entity and all associated tests
- Remove fileChanges JPQL join from AgentSessionRepository
- Update prompts/agent.md: document file tools with UUID v4 IDs,
  remove fileChanges schema, add patch-file exact-match guidance

BREAKING: DiffApplyService and FileChange model are removed.